# ibazel-windows-bug

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  devserver.go  devserver.js  main.js  package.json
