load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

tags = [
    # This tag starts the live_reload server inside iBazel and instructs it to send reload events to webbrowsers.
    # "ibazel_live_reload",
    # This tag instructs ibazel to pipe into stdin a event describing actions.
    "ibazel_notify_changes",
]


nodejs_binary(
    name = "nodedev",
    data = [ ":main.js"],
    entry_point = "devserver.js",
    tags = tags,
)

go_binary(
    name = "godev",
    srcs = ["devserver.go"],
    data = [":main.js"],
    tags = tags,
)
